// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renders Field component 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ThemeProvider
    theme={
        Object {
            "colors": Object {
              "alert": "#ffa000",
              "black": "#262626",
              "danger": "#d32f2f",
              "grayscale": Object {
                "dark": "#5E5E5E",
                "darker": "#383838",
                "darkest": "#131313",
                "light": "#D1D1D1",
                "lighter": "#EBEBEB",
                "lightest": "#F9F9F9",
                "medium": "#ABABAB",
              },
              "grey": "#EEE",
              "primary": "#3333FE",
              "secondary": "#FDB63F",
              "success": "#388e3c",
              "white": "#FFF",
            },
            "fonts": Object {
              "family": Object {
                "andesBlack": "andes-black, serif",
                "andesLight": "andes-extralight, serif",
                "montserrat": "montserrat, sans-serif",
              },
              "size": Object {
                "base": "1.4rem",
                "l": "1.8rem",
                "m": "1.5rem",
                "reset": "62.5%",
                "root": "1rem",
                "s": "1.2rem",
                "xl": "2.4rem",
                "xs": "1rem",
                "xxl": "3.2rem",
                "xxxl": "5rem",
              },
            },
            "grid": Object {
              "breakpoints": Object {
                "l": 992,
                "m": 768,
                "s": 576,
                "xl": 1200,
                "xs": 0,
              },
              "container": 120,
              "gridSize": 12,
              "gutterGrid": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 2.5,
                "xs": 1.6,
              },
              "gutterWidth": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "outerMargin": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "padding": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
            },
            "icons": Object {
              "size": Object {
                "l": "2.4rem",
                "m": "2rem",
                "s": "1.6rem",
                "xl": "3.6rem",
                "xs": "1.2rem",
                "xxl": "4.8rem",
                "xxxl": "5.6rem",
              },
            },
            "spaces": Object {
              "l": "2.5rem",
              "m": "1.6rem",
              "s": "0.8rem",
              "xl": "3.2rem",
              "xs": "0.4rem",
              "xxl": "5rem",
              "xxxl": "10rem",
            },
            "ui": Object {
              "size": Object {
                "l": "100%",
                "m": "40rem",
                "s": "20rem",
              },
            },
          }
    }
>
    <Field
        name="name"
        type="text"
    />
</ThemeProvider>,
  "nodes": Array [
    <ThemeProvider
      theme={
            Object {
                  "colors": Object {
                    "alert": "#ffa000",
                    "black": "#262626",
                    "danger": "#d32f2f",
                    "grayscale": Object {
                      "dark": "#5E5E5E",
                      "darker": "#383838",
                      "darkest": "#131313",
                      "light": "#D1D1D1",
                      "lighter": "#EBEBEB",
                      "lightest": "#F9F9F9",
                      "medium": "#ABABAB",
                    },
                    "grey": "#EEE",
                    "primary": "#3333FE",
                    "secondary": "#FDB63F",
                    "success": "#388e3c",
                    "white": "#FFF",
                  },
                  "fonts": Object {
                    "family": Object {
                      "andesBlack": "andes-black, serif",
                      "andesLight": "andes-extralight, serif",
                      "montserrat": "montserrat, sans-serif",
                    },
                    "size": Object {
                      "base": "1.4rem",
                      "l": "1.8rem",
                      "m": "1.5rem",
                      "reset": "62.5%",
                      "root": "1rem",
                      "s": "1.2rem",
                      "xl": "2.4rem",
                      "xs": "1rem",
                      "xxl": "3.2rem",
                      "xxxl": "5rem",
                    },
                  },
                  "grid": Object {
                    "breakpoints": Object {
                      "l": 992,
                      "m": 768,
                      "s": 576,
                      "xl": 1200,
                      "xs": 0,
                    },
                    "container": 120,
                    "gridSize": 12,
                    "gutterGrid": Object {
                      "l": 2.5,
                      "m": 2.5,
                      "s": 1.6,
                      "xl": 2.5,
                      "xs": 1.6,
                    },
                    "gutterWidth": Object {
                      "l": 2.5,
                      "m": 2.5,
                      "s": 1.6,
                      "xl": 5,
                      "xs": 1.6,
                    },
                    "outerMargin": Object {
                      "l": 2.5,
                      "m": 2.5,
                      "s": 1.6,
                      "xl": 5,
                      "xs": 1.6,
                    },
                    "padding": Object {
                      "l": 2.5,
                      "m": 2.5,
                      "s": 1.6,
                      "xl": 5,
                      "xs": 1.6,
                    },
                  },
                  "icons": Object {
                    "size": Object {
                      "l": "2.4rem",
                      "m": "2rem",
                      "s": "1.6rem",
                      "xl": "3.6rem",
                      "xs": "1.2rem",
                      "xxl": "4.8rem",
                      "xxxl": "5.6rem",
                    },
                  },
                  "spaces": Object {
                    "l": "2.5rem",
                    "m": "1.6rem",
                    "s": "0.8rem",
                    "xl": "3.2rem",
                    "xs": "0.4rem",
                    "xxl": "5rem",
                    "xxxl": "10rem",
                  },
                  "ui": Object {
                    "size": Object {
                      "l": "100%",
                      "m": "40rem",
                      "s": "20rem",
                    },
                  },
                }
      }
>
      <Field
            name="name"
            type="text"
      />
</ThemeProvider>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <IntlProvider
        locale="en"
        messages={Object {}}
>
        <ThemeProvider
                theme={
                        Object {
                                "colors": Object {
                                  "alert": "#ffa000",
                                  "black": "#262626",
                                  "danger": "#d32f2f",
                                  "grayscale": Object {
                                    "dark": "#5E5E5E",
                                    "darker": "#383838",
                                    "darkest": "#131313",
                                    "light": "#D1D1D1",
                                    "lighter": "#EBEBEB",
                                    "lightest": "#F9F9F9",
                                    "medium": "#ABABAB",
                                  },
                                  "grey": "#EEE",
                                  "primary": "#3333FE",
                                  "secondary": "#FDB63F",
                                  "success": "#388e3c",
                                  "white": "#FFF",
                                },
                                "fonts": Object {
                                  "family": Object {
                                    "andesBlack": "andes-black, serif",
                                    "andesLight": "andes-extralight, serif",
                                    "montserrat": "montserrat, sans-serif",
                                  },
                                  "size": Object {
                                    "base": "1.4rem",
                                    "l": "1.8rem",
                                    "m": "1.5rem",
                                    "reset": "62.5%",
                                    "root": "1rem",
                                    "s": "1.2rem",
                                    "xl": "2.4rem",
                                    "xs": "1rem",
                                    "xxl": "3.2rem",
                                    "xxxl": "5rem",
                                  },
                                },
                                "grid": Object {
                                  "breakpoints": Object {
                                    "l": 992,
                                    "m": 768,
                                    "s": 576,
                                    "xl": 1200,
                                    "xs": 0,
                                  },
                                  "container": 120,
                                  "gridSize": 12,
                                  "gutterGrid": Object {
                                    "l": 2.5,
                                    "m": 2.5,
                                    "s": 1.6,
                                    "xl": 2.5,
                                    "xs": 1.6,
                                  },
                                  "gutterWidth": Object {
                                    "l": 2.5,
                                    "m": 2.5,
                                    "s": 1.6,
                                    "xl": 5,
                                    "xs": 1.6,
                                  },
                                  "outerMargin": Object {
                                    "l": 2.5,
                                    "m": 2.5,
                                    "s": 1.6,
                                    "xl": 5,
                                    "xs": 1.6,
                                  },
                                  "padding": Object {
                                    "l": 2.5,
                                    "m": 2.5,
                                    "s": 1.6,
                                    "xl": 5,
                                    "xs": 1.6,
                                  },
                                },
                                "icons": Object {
                                  "size": Object {
                                    "l": "2.4rem",
                                    "m": "2rem",
                                    "s": "1.6rem",
                                    "xl": "3.6rem",
                                    "xs": "1.2rem",
                                    "xxl": "4.8rem",
                                    "xxxl": "5.6rem",
                                  },
                                },
                                "spaces": Object {
                                  "l": "2.5rem",
                                  "m": "1.6rem",
                                  "s": "0.8rem",
                                  "xl": "3.2rem",
                                  "xs": "0.4rem",
                                  "xxl": "5rem",
                                  "xxxl": "10rem",
                                },
                                "ui": Object {
                                  "size": Object {
                                    "l": "100%",
                                    "m": "40rem",
                                    "s": "20rem",
                                  },
                                },
                              }
                }
        >
                <Field
                        name="name"
                        type="text"
                />
        </ThemeProvider>
</IntlProvider>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": IntlProvider {
        "_reactInternalInstance": [Circular],
        "context": Object {
          "intl": undefined,
        },
        "props": Object {
          "children": <ThemeProvider
            theme={
                        Object {
                                    "colors": Object {
                                      "alert": "#ffa000",
                                      "black": "#262626",
                                      "danger": "#d32f2f",
                                      "grayscale": Object {
                                        "dark": "#5E5E5E",
                                        "darker": "#383838",
                                        "darkest": "#131313",
                                        "light": "#D1D1D1",
                                        "lighter": "#EBEBEB",
                                        "lightest": "#F9F9F9",
                                        "medium": "#ABABAB",
                                      },
                                      "grey": "#EEE",
                                      "primary": "#3333FE",
                                      "secondary": "#FDB63F",
                                      "success": "#388e3c",
                                      "white": "#FFF",
                                    },
                                    "fonts": Object {
                                      "family": Object {
                                        "andesBlack": "andes-black, serif",
                                        "andesLight": "andes-extralight, serif",
                                        "montserrat": "montserrat, sans-serif",
                                      },
                                      "size": Object {
                                        "base": "1.4rem",
                                        "l": "1.8rem",
                                        "m": "1.5rem",
                                        "reset": "62.5%",
                                        "root": "1rem",
                                        "s": "1.2rem",
                                        "xl": "2.4rem",
                                        "xs": "1rem",
                                        "xxl": "3.2rem",
                                        "xxxl": "5rem",
                                      },
                                    },
                                    "grid": Object {
                                      "breakpoints": Object {
                                        "l": 992,
                                        "m": 768,
                                        "s": 576,
                                        "xl": 1200,
                                        "xs": 0,
                                      },
                                      "container": 120,
                                      "gridSize": 12,
                                      "gutterGrid": Object {
                                        "l": 2.5,
                                        "m": 2.5,
                                        "s": 1.6,
                                        "xl": 2.5,
                                        "xs": 1.6,
                                      },
                                      "gutterWidth": Object {
                                        "l": 2.5,
                                        "m": 2.5,
                                        "s": 1.6,
                                        "xl": 5,
                                        "xs": 1.6,
                                      },
                                      "outerMargin": Object {
                                        "l": 2.5,
                                        "m": 2.5,
                                        "s": 1.6,
                                        "xl": 5,
                                        "xs": 1.6,
                                      },
                                      "padding": Object {
                                        "l": 2.5,
                                        "m": 2.5,
                                        "s": 1.6,
                                        "xl": 5,
                                        "xs": 1.6,
                                      },
                                    },
                                    "icons": Object {
                                      "size": Object {
                                        "l": "2.4rem",
                                        "m": "2rem",
                                        "s": "1.6rem",
                                        "xl": "3.6rem",
                                        "xs": "1.2rem",
                                        "xxl": "4.8rem",
                                        "xxxl": "5.6rem",
                                      },
                                    },
                                    "spaces": Object {
                                      "l": "2.5rem",
                                      "m": "1.6rem",
                                      "s": "0.8rem",
                                      "xl": "3.2rem",
                                      "xs": "0.4rem",
                                      "xxl": "5rem",
                                      "xxxl": "10rem",
                                    },
                                    "ui": Object {
                                      "size": Object {
                                        "l": "100%",
                                        "m": "40rem",
                                        "s": "20rem",
                                      },
                                    },
                                  }
            }
>
            <Field
                        name="name"
                        type="text"
            />
</ThemeProvider>,
          "locale": "en",
          "messages": Object {},
        },
        "refs": Object {},
        "state": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
          "now": [Function],
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ThemeProvider
          theme={
                    Object {
                              "colors": Object {
                                "alert": "#ffa000",
                                "black": "#262626",
                                "danger": "#d32f2f",
                                "grayscale": Object {
                                  "dark": "#5E5E5E",
                                  "darker": "#383838",
                                  "darkest": "#131313",
                                  "light": "#D1D1D1",
                                  "lighter": "#EBEBEB",
                                  "lightest": "#F9F9F9",
                                  "medium": "#ABABAB",
                                },
                                "grey": "#EEE",
                                "primary": "#3333FE",
                                "secondary": "#FDB63F",
                                "success": "#388e3c",
                                "white": "#FFF",
                              },
                              "fonts": Object {
                                "family": Object {
                                  "andesBlack": "andes-black, serif",
                                  "andesLight": "andes-extralight, serif",
                                  "montserrat": "montserrat, sans-serif",
                                },
                                "size": Object {
                                  "base": "1.4rem",
                                  "l": "1.8rem",
                                  "m": "1.5rem",
                                  "reset": "62.5%",
                                  "root": "1rem",
                                  "s": "1.2rem",
                                  "xl": "2.4rem",
                                  "xs": "1rem",
                                  "xxl": "3.2rem",
                                  "xxxl": "5rem",
                                },
                              },
                              "grid": Object {
                                "breakpoints": Object {
                                  "l": 992,
                                  "m": 768,
                                  "s": 576,
                                  "xl": 1200,
                                  "xs": 0,
                                },
                                "container": 120,
                                "gridSize": 12,
                                "gutterGrid": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 2.5,
                                  "xs": 1.6,
                                },
                                "gutterWidth": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                                "outerMargin": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                                "padding": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                              },
                              "icons": Object {
                                "size": Object {
                                  "l": "2.4rem",
                                  "m": "2rem",
                                  "s": "1.6rem",
                                  "xl": "3.6rem",
                                  "xs": "1.2rem",
                                  "xxl": "4.8rem",
                                  "xxxl": "5.6rem",
                                },
                              },
                              "spaces": Object {
                                "l": "2.5rem",
                                "m": "1.6rem",
                                "s": "0.8rem",
                                "xl": "3.2rem",
                                "xs": "0.4rem",
                                "xxl": "5rem",
                                "xxxl": "10rem",
                              },
                              "ui": Object {
                                "size": Object {
                                  "l": "100%",
                                  "m": "40rem",
                                  "s": "20rem",
                                },
                              },
                            }
          }
>
          <Field
                    name="name"
                    type="text"
          />
</ThemeProvider>,
        "_debugID": 2,
        "_renderedOutput": <ThemeProvider
          theme={
                    Object {
                              "colors": Object {
                                "alert": "#ffa000",
                                "black": "#262626",
                                "danger": "#d32f2f",
                                "grayscale": Object {
                                  "dark": "#5E5E5E",
                                  "darker": "#383838",
                                  "darkest": "#131313",
                                  "light": "#D1D1D1",
                                  "lighter": "#EBEBEB",
                                  "lightest": "#F9F9F9",
                                  "medium": "#ABABAB",
                                },
                                "grey": "#EEE",
                                "primary": "#3333FE",
                                "secondary": "#FDB63F",
                                "success": "#388e3c",
                                "white": "#FFF",
                              },
                              "fonts": Object {
                                "family": Object {
                                  "andesBlack": "andes-black, serif",
                                  "andesLight": "andes-extralight, serif",
                                  "montserrat": "montserrat, sans-serif",
                                },
                                "size": Object {
                                  "base": "1.4rem",
                                  "l": "1.8rem",
                                  "m": "1.5rem",
                                  "reset": "62.5%",
                                  "root": "1rem",
                                  "s": "1.2rem",
                                  "xl": "2.4rem",
                                  "xs": "1rem",
                                  "xxl": "3.2rem",
                                  "xxxl": "5rem",
                                },
                              },
                              "grid": Object {
                                "breakpoints": Object {
                                  "l": 992,
                                  "m": 768,
                                  "s": 576,
                                  "xl": 1200,
                                  "xs": 0,
                                },
                                "container": 120,
                                "gridSize": 12,
                                "gutterGrid": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 2.5,
                                  "xs": 1.6,
                                },
                                "gutterWidth": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                                "outerMargin": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                                "padding": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                              },
                              "icons": Object {
                                "size": Object {
                                  "l": "2.4rem",
                                  "m": "2rem",
                                  "s": "1.6rem",
                                  "xl": "3.6rem",
                                  "xs": "1.2rem",
                                  "xxl": "4.8rem",
                                  "xxxl": "5.6rem",
                                },
                              },
                              "spaces": Object {
                                "l": "2.5rem",
                                "m": "1.6rem",
                                "s": "0.8rem",
                                "xl": "3.2rem",
                                "xs": "0.4rem",
                                "xxl": "5rem",
                                "xxxl": "10rem",
                              },
                              "ui": Object {
                                "size": Object {
                                  "l": "100%",
                                  "m": "40rem",
                                  "s": "20rem",
                                },
                              },
                            }
          }
>
          <Field
                    name="name"
                    type="text"
          />
</ThemeProvider>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <IntlProvider
    locale="en"
    messages={Object {}}
>
    <ThemeProvider
        theme={
            Object {
                "colors": Object {
                  "alert": "#ffa000",
                  "black": "#262626",
                  "danger": "#d32f2f",
                  "grayscale": Object {
                    "dark": "#5E5E5E",
                    "darker": "#383838",
                    "darkest": "#131313",
                    "light": "#D1D1D1",
                    "lighter": "#EBEBEB",
                    "lightest": "#F9F9F9",
                    "medium": "#ABABAB",
                  },
                  "grey": "#EEE",
                  "primary": "#3333FE",
                  "secondary": "#FDB63F",
                  "success": "#388e3c",
                  "white": "#FFF",
                },
                "fonts": Object {
                  "family": Object {
                    "andesBlack": "andes-black, serif",
                    "andesLight": "andes-extralight, serif",
                    "montserrat": "montserrat, sans-serif",
                  },
                  "size": Object {
                    "base": "1.4rem",
                    "l": "1.8rem",
                    "m": "1.5rem",
                    "reset": "62.5%",
                    "root": "1rem",
                    "s": "1.2rem",
                    "xl": "2.4rem",
                    "xs": "1rem",
                    "xxl": "3.2rem",
                    "xxxl": "5rem",
                  },
                },
                "grid": Object {
                  "breakpoints": Object {
                    "l": 992,
                    "m": 768,
                    "s": 576,
                    "xl": 1200,
                    "xs": 0,
                  },
                  "container": 120,
                  "gridSize": 12,
                  "gutterGrid": Object {
                    "l": 2.5,
                    "m": 2.5,
                    "s": 1.6,
                    "xl": 2.5,
                    "xs": 1.6,
                  },
                  "gutterWidth": Object {
                    "l": 2.5,
                    "m": 2.5,
                    "s": 1.6,
                    "xl": 5,
                    "xs": 1.6,
                  },
                  "outerMargin": Object {
                    "l": 2.5,
                    "m": 2.5,
                    "s": 1.6,
                    "xl": 5,
                    "xs": 1.6,
                  },
                  "padding": Object {
                    "l": 2.5,
                    "m": 2.5,
                    "s": 1.6,
                    "xl": 5,
                    "xs": 1.6,
                  },
                },
                "icons": Object {
                  "size": Object {
                    "l": "2.4rem",
                    "m": "2rem",
                    "s": "1.6rem",
                    "xl": "3.6rem",
                    "xs": "1.2rem",
                    "xxl": "4.8rem",
                    "xxxl": "5.6rem",
                  },
                },
                "spaces": Object {
                  "l": "2.5rem",
                  "m": "1.6rem",
                  "s": "0.8rem",
                  "xl": "3.2rem",
                  "xs": "0.4rem",
                  "xxl": "5rem",
                  "xxxl": "10rem",
                },
                "ui": Object {
                  "size": Object {
                    "l": "100%",
                    "m": "40rem",
                    "s": "20rem",
                  },
                },
              }
        }
    >
        <Field
            name="name"
            type="text"
        />
    </ThemeProvider>
</IntlProvider>,
}
`;

exports[`should renders label after input when type is radio 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ThemeProvider
    theme={
        Object {
            "colors": Object {
              "alert": "#ffa000",
              "black": "#262626",
              "danger": "#d32f2f",
              "grayscale": Object {
                "dark": "#5E5E5E",
                "darker": "#383838",
                "darkest": "#131313",
                "light": "#D1D1D1",
                "lighter": "#EBEBEB",
                "lightest": "#F9F9F9",
                "medium": "#ABABAB",
              },
              "grey": "#EEE",
              "primary": "#3333FE",
              "secondary": "#FDB63F",
              "success": "#388e3c",
              "white": "#FFF",
            },
            "fonts": Object {
              "family": Object {
                "andesBlack": "andes-black, serif",
                "andesLight": "andes-extralight, serif",
                "montserrat": "montserrat, sans-serif",
              },
              "size": Object {
                "base": "1.4rem",
                "l": "1.8rem",
                "m": "1.5rem",
                "reset": "62.5%",
                "root": "1rem",
                "s": "1.2rem",
                "xl": "2.4rem",
                "xs": "1rem",
                "xxl": "3.2rem",
                "xxxl": "5rem",
              },
            },
            "grid": Object {
              "breakpoints": Object {
                "l": 992,
                "m": 768,
                "s": 576,
                "xl": 1200,
                "xs": 0,
              },
              "container": 120,
              "gridSize": 12,
              "gutterGrid": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 2.5,
                "xs": 1.6,
              },
              "gutterWidth": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "outerMargin": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "padding": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
            },
            "icons": Object {
              "size": Object {
                "l": "2.4rem",
                "m": "2rem",
                "s": "1.6rem",
                "xl": "3.6rem",
                "xs": "1.2rem",
                "xxl": "4.8rem",
                "xxxl": "5.6rem",
              },
            },
            "spaces": Object {
              "l": "2.5rem",
              "m": "1.6rem",
              "s": "0.8rem",
              "xl": "3.2rem",
              "xs": "0.4rem",
              "xxl": "5rem",
              "xxxl": "10rem",
            },
            "ui": Object {
              "size": Object {
                "l": "100%",
                "m": "40rem",
                "s": "20rem",
              },
            },
          }
    }
>
    <Field
        error={
            Object {
                "id": "test",
                "values": Object {},
              }
        }
        invalid={true}
        name="name"
        type="text"
    />
</ThemeProvider>,
  "nodes": Array [
    <ThemeProvider
      theme={
            Object {
                  "colors": Object {
                    "alert": "#ffa000",
                    "black": "#262626",
                    "danger": "#d32f2f",
                    "grayscale": Object {
                      "dark": "#5E5E5E",
                      "darker": "#383838",
                      "darkest": "#131313",
                      "light": "#D1D1D1",
                      "lighter": "#EBEBEB",
                      "lightest": "#F9F9F9",
                      "medium": "#ABABAB",
                    },
                    "grey": "#EEE",
                    "primary": "#3333FE",
                    "secondary": "#FDB63F",
                    "success": "#388e3c",
                    "white": "#FFF",
                  },
                  "fonts": Object {
                    "family": Object {
                      "andesBlack": "andes-black, serif",
                      "andesLight": "andes-extralight, serif",
                      "montserrat": "montserrat, sans-serif",
                    },
                    "size": Object {
                      "base": "1.4rem",
                      "l": "1.8rem",
                      "m": "1.5rem",
                      "reset": "62.5%",
                      "root": "1rem",
                      "s": "1.2rem",
                      "xl": "2.4rem",
                      "xs": "1rem",
                      "xxl": "3.2rem",
                      "xxxl": "5rem",
                    },
                  },
                  "grid": Object {
                    "breakpoints": Object {
                      "l": 992,
                      "m": 768,
                      "s": 576,
                      "xl": 1200,
                      "xs": 0,
                    },
                    "container": 120,
                    "gridSize": 12,
                    "gutterGrid": Object {
                      "l": 2.5,
                      "m": 2.5,
                      "s": 1.6,
                      "xl": 2.5,
                      "xs": 1.6,
                    },
                    "gutterWidth": Object {
                      "l": 2.5,
                      "m": 2.5,
                      "s": 1.6,
                      "xl": 5,
                      "xs": 1.6,
                    },
                    "outerMargin": Object {
                      "l": 2.5,
                      "m": 2.5,
                      "s": 1.6,
                      "xl": 5,
                      "xs": 1.6,
                    },
                    "padding": Object {
                      "l": 2.5,
                      "m": 2.5,
                      "s": 1.6,
                      "xl": 5,
                      "xs": 1.6,
                    },
                  },
                  "icons": Object {
                    "size": Object {
                      "l": "2.4rem",
                      "m": "2rem",
                      "s": "1.6rem",
                      "xl": "3.6rem",
                      "xs": "1.2rem",
                      "xxl": "4.8rem",
                      "xxxl": "5.6rem",
                    },
                  },
                  "spaces": Object {
                    "l": "2.5rem",
                    "m": "1.6rem",
                    "s": "0.8rem",
                    "xl": "3.2rem",
                    "xs": "0.4rem",
                    "xxl": "5rem",
                    "xxxl": "10rem",
                  },
                  "ui": Object {
                    "size": Object {
                      "l": "100%",
                      "m": "40rem",
                      "s": "20rem",
                    },
                  },
                }
      }
>
      <Field
            error={
                  Object {
                        "id": "test",
                        "values": Object {},
                      }
            }
            invalid={true}
            name="name"
            type="text"
      />
</ThemeProvider>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <IntlProvider
        locale="en"
        messages={Object {}}
>
        <ThemeProvider
                theme={
                        Object {
                                "colors": Object {
                                  "alert": "#ffa000",
                                  "black": "#262626",
                                  "danger": "#d32f2f",
                                  "grayscale": Object {
                                    "dark": "#5E5E5E",
                                    "darker": "#383838",
                                    "darkest": "#131313",
                                    "light": "#D1D1D1",
                                    "lighter": "#EBEBEB",
                                    "lightest": "#F9F9F9",
                                    "medium": "#ABABAB",
                                  },
                                  "grey": "#EEE",
                                  "primary": "#3333FE",
                                  "secondary": "#FDB63F",
                                  "success": "#388e3c",
                                  "white": "#FFF",
                                },
                                "fonts": Object {
                                  "family": Object {
                                    "andesBlack": "andes-black, serif",
                                    "andesLight": "andes-extralight, serif",
                                    "montserrat": "montserrat, sans-serif",
                                  },
                                  "size": Object {
                                    "base": "1.4rem",
                                    "l": "1.8rem",
                                    "m": "1.5rem",
                                    "reset": "62.5%",
                                    "root": "1rem",
                                    "s": "1.2rem",
                                    "xl": "2.4rem",
                                    "xs": "1rem",
                                    "xxl": "3.2rem",
                                    "xxxl": "5rem",
                                  },
                                },
                                "grid": Object {
                                  "breakpoints": Object {
                                    "l": 992,
                                    "m": 768,
                                    "s": 576,
                                    "xl": 1200,
                                    "xs": 0,
                                  },
                                  "container": 120,
                                  "gridSize": 12,
                                  "gutterGrid": Object {
                                    "l": 2.5,
                                    "m": 2.5,
                                    "s": 1.6,
                                    "xl": 2.5,
                                    "xs": 1.6,
                                  },
                                  "gutterWidth": Object {
                                    "l": 2.5,
                                    "m": 2.5,
                                    "s": 1.6,
                                    "xl": 5,
                                    "xs": 1.6,
                                  },
                                  "outerMargin": Object {
                                    "l": 2.5,
                                    "m": 2.5,
                                    "s": 1.6,
                                    "xl": 5,
                                    "xs": 1.6,
                                  },
                                  "padding": Object {
                                    "l": 2.5,
                                    "m": 2.5,
                                    "s": 1.6,
                                    "xl": 5,
                                    "xs": 1.6,
                                  },
                                },
                                "icons": Object {
                                  "size": Object {
                                    "l": "2.4rem",
                                    "m": "2rem",
                                    "s": "1.6rem",
                                    "xl": "3.6rem",
                                    "xs": "1.2rem",
                                    "xxl": "4.8rem",
                                    "xxxl": "5.6rem",
                                  },
                                },
                                "spaces": Object {
                                  "l": "2.5rem",
                                  "m": "1.6rem",
                                  "s": "0.8rem",
                                  "xl": "3.2rem",
                                  "xs": "0.4rem",
                                  "xxl": "5rem",
                                  "xxxl": "10rem",
                                },
                                "ui": Object {
                                  "size": Object {
                                    "l": "100%",
                                    "m": "40rem",
                                    "s": "20rem",
                                  },
                                },
                              }
                }
        >
                <Field
                        error={
                                Object {
                                        "id": "test",
                                        "values": Object {},
                                      }
                        }
                        invalid={true}
                        name="name"
                        type="text"
                />
        </ThemeProvider>
</IntlProvider>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": IntlProvider {
        "_reactInternalInstance": [Circular],
        "context": Object {
          "intl": undefined,
        },
        "props": Object {
          "children": <ThemeProvider
            theme={
                        Object {
                                    "colors": Object {
                                      "alert": "#ffa000",
                                      "black": "#262626",
                                      "danger": "#d32f2f",
                                      "grayscale": Object {
                                        "dark": "#5E5E5E",
                                        "darker": "#383838",
                                        "darkest": "#131313",
                                        "light": "#D1D1D1",
                                        "lighter": "#EBEBEB",
                                        "lightest": "#F9F9F9",
                                        "medium": "#ABABAB",
                                      },
                                      "grey": "#EEE",
                                      "primary": "#3333FE",
                                      "secondary": "#FDB63F",
                                      "success": "#388e3c",
                                      "white": "#FFF",
                                    },
                                    "fonts": Object {
                                      "family": Object {
                                        "andesBlack": "andes-black, serif",
                                        "andesLight": "andes-extralight, serif",
                                        "montserrat": "montserrat, sans-serif",
                                      },
                                      "size": Object {
                                        "base": "1.4rem",
                                        "l": "1.8rem",
                                        "m": "1.5rem",
                                        "reset": "62.5%",
                                        "root": "1rem",
                                        "s": "1.2rem",
                                        "xl": "2.4rem",
                                        "xs": "1rem",
                                        "xxl": "3.2rem",
                                        "xxxl": "5rem",
                                      },
                                    },
                                    "grid": Object {
                                      "breakpoints": Object {
                                        "l": 992,
                                        "m": 768,
                                        "s": 576,
                                        "xl": 1200,
                                        "xs": 0,
                                      },
                                      "container": 120,
                                      "gridSize": 12,
                                      "gutterGrid": Object {
                                        "l": 2.5,
                                        "m": 2.5,
                                        "s": 1.6,
                                        "xl": 2.5,
                                        "xs": 1.6,
                                      },
                                      "gutterWidth": Object {
                                        "l": 2.5,
                                        "m": 2.5,
                                        "s": 1.6,
                                        "xl": 5,
                                        "xs": 1.6,
                                      },
                                      "outerMargin": Object {
                                        "l": 2.5,
                                        "m": 2.5,
                                        "s": 1.6,
                                        "xl": 5,
                                        "xs": 1.6,
                                      },
                                      "padding": Object {
                                        "l": 2.5,
                                        "m": 2.5,
                                        "s": 1.6,
                                        "xl": 5,
                                        "xs": 1.6,
                                      },
                                    },
                                    "icons": Object {
                                      "size": Object {
                                        "l": "2.4rem",
                                        "m": "2rem",
                                        "s": "1.6rem",
                                        "xl": "3.6rem",
                                        "xs": "1.2rem",
                                        "xxl": "4.8rem",
                                        "xxxl": "5.6rem",
                                      },
                                    },
                                    "spaces": Object {
                                      "l": "2.5rem",
                                      "m": "1.6rem",
                                      "s": "0.8rem",
                                      "xl": "3.2rem",
                                      "xs": "0.4rem",
                                      "xxl": "5rem",
                                      "xxxl": "10rem",
                                    },
                                    "ui": Object {
                                      "size": Object {
                                        "l": "100%",
                                        "m": "40rem",
                                        "s": "20rem",
                                      },
                                    },
                                  }
            }
>
            <Field
                        error={
                                    Object {
                                                "id": "test",
                                                "values": Object {},
                                              }
                        }
                        invalid={true}
                        name="name"
                        type="text"
            />
</ThemeProvider>,
          "locale": "en",
          "messages": Object {},
        },
        "refs": Object {},
        "state": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
          "now": [Function],
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ThemeProvider
          theme={
                    Object {
                              "colors": Object {
                                "alert": "#ffa000",
                                "black": "#262626",
                                "danger": "#d32f2f",
                                "grayscale": Object {
                                  "dark": "#5E5E5E",
                                  "darker": "#383838",
                                  "darkest": "#131313",
                                  "light": "#D1D1D1",
                                  "lighter": "#EBEBEB",
                                  "lightest": "#F9F9F9",
                                  "medium": "#ABABAB",
                                },
                                "grey": "#EEE",
                                "primary": "#3333FE",
                                "secondary": "#FDB63F",
                                "success": "#388e3c",
                                "white": "#FFF",
                              },
                              "fonts": Object {
                                "family": Object {
                                  "andesBlack": "andes-black, serif",
                                  "andesLight": "andes-extralight, serif",
                                  "montserrat": "montserrat, sans-serif",
                                },
                                "size": Object {
                                  "base": "1.4rem",
                                  "l": "1.8rem",
                                  "m": "1.5rem",
                                  "reset": "62.5%",
                                  "root": "1rem",
                                  "s": "1.2rem",
                                  "xl": "2.4rem",
                                  "xs": "1rem",
                                  "xxl": "3.2rem",
                                  "xxxl": "5rem",
                                },
                              },
                              "grid": Object {
                                "breakpoints": Object {
                                  "l": 992,
                                  "m": 768,
                                  "s": 576,
                                  "xl": 1200,
                                  "xs": 0,
                                },
                                "container": 120,
                                "gridSize": 12,
                                "gutterGrid": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 2.5,
                                  "xs": 1.6,
                                },
                                "gutterWidth": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                                "outerMargin": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                                "padding": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                              },
                              "icons": Object {
                                "size": Object {
                                  "l": "2.4rem",
                                  "m": "2rem",
                                  "s": "1.6rem",
                                  "xl": "3.6rem",
                                  "xs": "1.2rem",
                                  "xxl": "4.8rem",
                                  "xxxl": "5.6rem",
                                },
                              },
                              "spaces": Object {
                                "l": "2.5rem",
                                "m": "1.6rem",
                                "s": "0.8rem",
                                "xl": "3.2rem",
                                "xs": "0.4rem",
                                "xxl": "5rem",
                                "xxxl": "10rem",
                              },
                              "ui": Object {
                                "size": Object {
                                  "l": "100%",
                                  "m": "40rem",
                                  "s": "20rem",
                                },
                              },
                            }
          }
>
          <Field
                    error={
                              Object {
                                        "id": "test",
                                        "values": Object {},
                                      }
                    }
                    invalid={true}
                    name="name"
                    type="text"
          />
</ThemeProvider>,
        "_debugID": 4,
        "_renderedOutput": <ThemeProvider
          theme={
                    Object {
                              "colors": Object {
                                "alert": "#ffa000",
                                "black": "#262626",
                                "danger": "#d32f2f",
                                "grayscale": Object {
                                  "dark": "#5E5E5E",
                                  "darker": "#383838",
                                  "darkest": "#131313",
                                  "light": "#D1D1D1",
                                  "lighter": "#EBEBEB",
                                  "lightest": "#F9F9F9",
                                  "medium": "#ABABAB",
                                },
                                "grey": "#EEE",
                                "primary": "#3333FE",
                                "secondary": "#FDB63F",
                                "success": "#388e3c",
                                "white": "#FFF",
                              },
                              "fonts": Object {
                                "family": Object {
                                  "andesBlack": "andes-black, serif",
                                  "andesLight": "andes-extralight, serif",
                                  "montserrat": "montserrat, sans-serif",
                                },
                                "size": Object {
                                  "base": "1.4rem",
                                  "l": "1.8rem",
                                  "m": "1.5rem",
                                  "reset": "62.5%",
                                  "root": "1rem",
                                  "s": "1.2rem",
                                  "xl": "2.4rem",
                                  "xs": "1rem",
                                  "xxl": "3.2rem",
                                  "xxxl": "5rem",
                                },
                              },
                              "grid": Object {
                                "breakpoints": Object {
                                  "l": 992,
                                  "m": 768,
                                  "s": 576,
                                  "xl": 1200,
                                  "xs": 0,
                                },
                                "container": 120,
                                "gridSize": 12,
                                "gutterGrid": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 2.5,
                                  "xs": 1.6,
                                },
                                "gutterWidth": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                                "outerMargin": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                                "padding": Object {
                                  "l": 2.5,
                                  "m": 2.5,
                                  "s": 1.6,
                                  "xl": 5,
                                  "xs": 1.6,
                                },
                              },
                              "icons": Object {
                                "size": Object {
                                  "l": "2.4rem",
                                  "m": "2rem",
                                  "s": "1.6rem",
                                  "xl": "3.6rem",
                                  "xs": "1.2rem",
                                  "xxl": "4.8rem",
                                  "xxxl": "5.6rem",
                                },
                              },
                              "spaces": Object {
                                "l": "2.5rem",
                                "m": "1.6rem",
                                "s": "0.8rem",
                                "xl": "3.2rem",
                                "xs": "0.4rem",
                                "xxl": "5rem",
                                "xxxl": "10rem",
                              },
                              "ui": Object {
                                "size": Object {
                                  "l": "100%",
                                  "m": "40rem",
                                  "s": "20rem",
                                },
                              },
                            }
          }
>
          <Field
                    error={
                              Object {
                                        "id": "test",
                                        "values": Object {},
                                      }
                    }
                    invalid={true}
                    name="name"
                    type="text"
          />
</ThemeProvider>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <IntlProvider
    locale="en"
    messages={Object {}}
>
    <ThemeProvider
        theme={
            Object {
                "colors": Object {
                  "alert": "#ffa000",
                  "black": "#262626",
                  "danger": "#d32f2f",
                  "grayscale": Object {
                    "dark": "#5E5E5E",
                    "darker": "#383838",
                    "darkest": "#131313",
                    "light": "#D1D1D1",
                    "lighter": "#EBEBEB",
                    "lightest": "#F9F9F9",
                    "medium": "#ABABAB",
                  },
                  "grey": "#EEE",
                  "primary": "#3333FE",
                  "secondary": "#FDB63F",
                  "success": "#388e3c",
                  "white": "#FFF",
                },
                "fonts": Object {
                  "family": Object {
                    "andesBlack": "andes-black, serif",
                    "andesLight": "andes-extralight, serif",
                    "montserrat": "montserrat, sans-serif",
                  },
                  "size": Object {
                    "base": "1.4rem",
                    "l": "1.8rem",
                    "m": "1.5rem",
                    "reset": "62.5%",
                    "root": "1rem",
                    "s": "1.2rem",
                    "xl": "2.4rem",
                    "xs": "1rem",
                    "xxl": "3.2rem",
                    "xxxl": "5rem",
                  },
                },
                "grid": Object {
                  "breakpoints": Object {
                    "l": 992,
                    "m": 768,
                    "s": 576,
                    "xl": 1200,
                    "xs": 0,
                  },
                  "container": 120,
                  "gridSize": 12,
                  "gutterGrid": Object {
                    "l": 2.5,
                    "m": 2.5,
                    "s": 1.6,
                    "xl": 2.5,
                    "xs": 1.6,
                  },
                  "gutterWidth": Object {
                    "l": 2.5,
                    "m": 2.5,
                    "s": 1.6,
                    "xl": 5,
                    "xs": 1.6,
                  },
                  "outerMargin": Object {
                    "l": 2.5,
                    "m": 2.5,
                    "s": 1.6,
                    "xl": 5,
                    "xs": 1.6,
                  },
                  "padding": Object {
                    "l": 2.5,
                    "m": 2.5,
                    "s": 1.6,
                    "xl": 5,
                    "xs": 1.6,
                  },
                },
                "icons": Object {
                  "size": Object {
                    "l": "2.4rem",
                    "m": "2rem",
                    "s": "1.6rem",
                    "xl": "3.6rem",
                    "xs": "1.2rem",
                    "xxl": "4.8rem",
                    "xxxl": "5.6rem",
                  },
                },
                "spaces": Object {
                  "l": "2.5rem",
                  "m": "1.6rem",
                  "s": "0.8rem",
                  "xl": "3.2rem",
                  "xs": "0.4rem",
                  "xxl": "5rem",
                  "xxxl": "10rem",
                },
                "ui": Object {
                  "size": Object {
                    "l": "100%",
                    "m": "40rem",
                    "s": "20rem",
                  },
                },
              }
        }
    >
        <Field
            error={
                Object {
                    "id": "test",
                    "values": Object {},
                  }
            }
            invalid={true}
            name="name"
            type="text"
        />
    </ThemeProvider>
</IntlProvider>,
}
`;
